versioned_docs/version-5.7.0/api/2_capi/pushnotification/schedulerichpushnotificationutc.md
# ScheduleRichPushNotificationUTC

Schedules a rich push notification to a user at a future absolute time.

<PartialServop service_name="pushNotification" operation_name="SCHEDULE_RICH_NOTIFICATION" />

## Method Parameters

| Parameter              | Description                                                    |
| ---------------------- | -------------------------------------------------------------- |
| profileId              | Identifies the user to send to                                 |
| notificationTemplateId | Id of the notification template                                |
| substitutions          | JSON defining the substitution params to use with the template |
| startTime              | Time to send notification (UTC)                                |

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string profileId = "kjhkjhgfkjshgkjh";
int notificationTemplateId = 1;
string substitutionJson = "{\"0\":\"value0\",\"1\":\"value1\"}";
int startTime = 1437579786000;
SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("Success | {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.PushNotification.scheduleRichPushNotificationUTC(profileId, notificationTemplateId, substitutionJson, startTime, successCallback, failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char *profileId = "kjhkjhgfkjshgkjh";
int notificationTemplateId = 1;
const char *substitutionJson = "{\"0\":\"value0\",\"1\":\"value1\"}";
int startTime = 1437579786000;

<%= data.branding.codePrefix %>->getPushNotification()->scheduleRichPushNotificationUTC(profileId, notificationTemplateId, substitutionJson, startTime, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString *profileId = @"kjhkjhgfkjshgkjh";
int notificationTemplateId = 1;
NSString *substitutionJson = @"{\"0\":\"value0\",\"1\":\"value1\"}";
int startTime = 1437579786000;
BCCompletionBlock successBlock;      // define callback
BCErrorCompletionBlock failureBlock; // define callback

[[<%= data.branding.codePrefix %> pushNotificationService] scheduleRichPushNotificationUTC:profileId
     notificationTemplateId:notificationTemplateId
           substitutionJson:substitutionJson
                  startTime:startTime
            completionBlock:successBlock
       errorCompletionBlock:failureBlock
                   cbObject:nil];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String profileId = "kjhkjhgfkjshgkjh";
int notificationTemplateId = 1;
String substitutionJson = "{\"0\":\"value0\",\"1\":\"value1\"}";
int startTime = 1437579786000;
this; // implements IServerCallback

<%= data.branding.codePrefix %>.getPushNotification().scheduleRichPushNotificationUTC(profileId, notificationTemplateId, substitutionJson, startTime, this);

public void serverCallback(ServiceName serviceName, ServiceOperation serviceOperation, JSONObject jsonData)
{
    System.out.print(String.format("Success | %s", jsonData.toString()));
}
public void serverError(ServiceName serviceName, ServiceOperation serviceOperation, int statusCode, int reasonCode, String jsonError)
{
    System.out.print(String.format("Failed | %d %d %s", statusCode,  reasonCode, jsonError.toString()));
}
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var profileId = "kjhkjhgfkjshgkjh";
var notificationTemplateId = 1;
var substitutionJson = {
    "0": "value0",
    "1": "value1"
};
var startTime = 1437579786000;

<%= data.branding.codePrefix %>.pushNotification.scheduleRichPushNotificationUTC(profileId, notificationTemplateId, substitutionJson, startTime, result =>
{
	var status = result.status;
	console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
var  profileId = "kjhkjhgfkjshgkjh";
var  notificationTemplateId = 1;
var  substitutionJson = {
    "0": "value0",
    "1": "value1"
};
var  startTime = 1437579786000;

ServerResponse result = await <%= data.branding.codePrefix %>.pushNotificationService.scheduleRichPushNotificationUTC(profileId:profileId, notificationTemplateId:notificationTemplateId, substitution:substitutionJson, startTime:startTime);

if (result.statusCode == 200) {
    print("Success");
} else {
    print("Failed ${result.error['status_message'] ?? result.error}");
}
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var profileId = "kjhkjhgfkjshgkjh";
var notificationTemplateId = 1;
var substitutionJson = {
    "0": "value0",
    "1": "value1"
};
var startTime = 1437579786000;
var pushNotificationProxy = bridge.getPushNotificationServiceProxy();

var postResult = pushNotificationProxy.scheduleRichPushNotificationUTC(profileId, notificationTemplateId, substitutionJson, startTime);
if (postResult.status == 200) {
    // Success!
}
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
	"service": "pushNotification",
	"operation": "SCHEDULE_RICH_NOTIFICATION",
	"data": {
		"profileId": "kjhkjhgfkjshgkjh",
		"notificationTemplateId": 1,
		"substitutions": {
			"0": "value0",
			"1": "value1"
		},
		"startDateUTC": "[[#ts+60000]]"
	}
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```
